[package]
name = "studyvault_rpc_services"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "studyvault-server"
path = "src/server.rs"

[[bin]]
name = "studyvault-client"
path = "src/client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
async-stream = "0.3"
mysql = "*"
uuid = { version = "1.4", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10"
